feat(dashboard): Implement comprehensive dashboard with real-time KPIs
- Add new documentation files for dashboard implementation
- Create RestTemplateConfig for inter-service communication
- Extend DashboardKPIs DTO with additional user-related fields
- Add UserKPIs DTO for fetching user metrics
- Update AlertService to fetch and combine user and alert KPIs
- Modify frontend services and components to support new dashboard data
- Configure environment files for production deployment
- Implement real-time dashboard data loading mechanism
- Add error handling and logging for dashboard data retrieval
Enhances system observability by providing a comprehensive, real-time dashboard with metrics across alerts and user activities.